<resources>
    <string name="app_name">MobileOffloading</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="exit_dialog_title">Exiting App!</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="finish_activity_dialog_title">Returning to Home page!</string>
    <string name="finish_activity_dialog_message">Are you sure you want to return to Home page?</string>
    <string name="bluetooth_permission_denied_alert_title">Bluetooth Permission Denied!</string>
    <string name="bluetooth_permission_denied_alert_message">
        App can not function without access to Bluetooth! Go to Settings and enable bluetooth access. Exiting the app!
    </string>
    <string name="bluetooth_not_supported_alert_title">Bluetooth Not Supported by Device!</string>
    <string name="bluetooth_not_supported_alert_message">
        The device does not support Bluetooth! App can not function without bluetooth. Exiting the app!
    </string>
    <string name="bluetooth_enabled_alert_title">Bluetooth Enabled on Device!</string>
    <string name="bluetooth_enabled_alert_message">
        Bluetooth is now enabled on the device! You can now use Scan/Advertise option to connect to other devices
    </string>
    <string name="crash_dialog_title">Error</string>
    <string name="crash_dialog_message">
        Unfortunately the app has stopped working! Exiting the App!
    </string>
    <string name="connection_consent_alert_title">Connect to master Device?</string>
    <string name="connection_consent_alert_message">
        Do you want to connect to the Master Device: %1$s ?
    </string>
    <string name="turn_on_gps_dialog_title">Turn On GPS!</string>
    <string name="turn_on_gps_message">Do you wish to turn on GPS?</string>
    <string name="empty_string" />
    <string name="scan">Scan</string>
    <string name="devices_discovered">Devices Discovered</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="select_mode_of_operation">Select Mode of Operation</string>
    <string name="continue_label">Continue</string>
    <string name="mode">Mode</string>
    <string name="slave">Slave</string>
    <string name="master">Master</string>
    <string name="nearbyServiceId">OffloadingService</string>
    <string name="device_name" formatted="false">Device Name: %1$s</string>
    <string name="start_advertising">Start Advertising</string>
    <string name="stop_advertising">Stop Advertising</string>
    <string name="battery_level" formatted="false">Battery Level: %1$d</string>
    <string name="location" formatted="false">Location: Latitude=%1$s Longitude=%2$s</string>
    <string name="device_info">Device Info</string>
    <string name="status" formatted="false">Status: %1$s</string>
    <string name="result" formatted="false">Result:\n%1$s</string>
    <string name="update_device_info">Update Device Info</string>
    <string name="computeButtonText">Compute</string>
    <string name="connected">Connected</string>
</resources>